unpackaged/main/default/objects/Enrollment_Record__c/fields/Planning_on_using_FAFSA__c.field-meta.xml
<CustomField>
    <fullName>Planning_on_using_FAFSA__c</fullName>
    <label>Planning on using FAFSA?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>