unpackaged/main/default/objects/Enrollment_Record__c/fields/Program_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_End_Date__c</fullName>
    <formula>Program__r.Program_End_Date__c</formula>
    <label>Program End Date</label>
    <type>Date</type>
</CustomField>