unpackaged/main/default/objects/Enrollment_Record__c/fields/Program_Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Location_Name__c</fullName>
    <description>Created for use in team member filters in Distribution Engine</description>
    <formula>Program__r.Location__r.Name</formula>
    <label>Program Location Name</label>
    <type>Text</type>
</CustomField>