unpackaged/main/default/objects/Enrollment_Record__c/fields/Program_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Name__c</fullName>
    <formula>Program__r.Name</formula>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>