unpackaged/main/default/objects/Enrollment_Record__c/fields/Program_Semester_Name__c.field-meta.xml
<CustomField>
    <fullName>Program_Semester_Name__c</fullName>
    <formula>Program__r.Semester__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Semester Name</label>
    <type>Text</type>
</CustomField>