unpackaged/main/default/objects/Enrollment_Record__c/fields/Program_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Start_Date__c</fullName>
    <description>This field was created for use in Five9 auto-dial campaigns.</description>
    <formula>Program__r.Program_Start_Date__c</formula>
    <label>Program Start Date</label>
    <type>Date</type>
</CustomField>