unpackaged/main/default/objects/Enrollment_Record__c/fields/Retention_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Retention_Challenges__c</fullName>
    <label>Retention Challenges</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Academic Concern: Accommodations</fullName>
                <label>Accommodations</label>
            </value>
            <value>
                <fullName>Academic Concern: General (see notes)</fullName>
                <label>Academic Concern: General</label>
            </value>
            <value>
                <fullName>Academic Concern: GPA/Support</fullName>
                <label>Academic Concern: Previous College Credit</label>
            </value>
            <value>
                <fullName>College Counseling: Special Advisement</fullName>
                <label>College Counseling: Post-Verto</label>
            </value>
            <value>
                <fullName>Financial Concern: FAFSA-dependent</fullName>
                <label>Financial Concern: Financial Aid</label>
            </value>
            <value>
                <fullName>Financial Concern: General (see notes)</fullName>
                <label>Financial Concern: General</label>
            </value>
            <value>
                <fullName>Health Concern: General (see notes)</fullName>
                <label>Health Concern: General</label>
            </value>
            <value>
                <fullName>Health Concern: Pre-Existing/Chronic Condition</fullName>
            </value>
            <value>
                <fullName>Location-dependent</fullName>
            </value>
            <value>
                <fullName>Passport Issues</fullName>
            </value>
            <value>
                <fullName>Reluctant Parent</fullName>
                <label>Family Concern</label>
            </value>
            <value>
                <fullName>Safety Concern: COVID related</fullName>
            </value>
            <value>
                <fullName>Safety Concern: General (see notes)</fullName>
                <label>Safety Concern: General</label>
            </value>
            <value>
                <fullName>College Counseling: General</fullName>
            </value>
            <value>
                <fullName>Health Concern: Mental Health</fullName>
            </value>
            <value>
                <fullName>Non-responsive</fullName>
            </value>
            <value>
                <fullName>International Student</fullName>
            </value>
            <value>
                <fullName>Deferral</fullName>
                <isActive>false</isActive>
                <label>Deferral</label>
            </value>
            <value>
                <fullName>Health Concern: Dietary/Allergen</fullName>
                <isActive>false</isActive>
                <label>Health Concern: Dietary/Allergen</label>
            </value>
            <value>
                <fullName>Semester Undecided</fullName>
                <isActive>false</isActive>
                <label>Semester Undecided</label>
            </value>
            <value>
                <fullName>Withdrawal Request - Pending</fullName>
                <isActive>false</isActive>
                <label>Withdrawal Request - Pending</label>
            </value>
            <value>
                <fullName>Withdrawal Request - Retained</fullName>
                <isActive>false</isActive>
                <label>Withdrawal Request - Retained</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>