unpackaged/main/default/objects/Enrollment_Record__c/fields/Retention_Challenges_Notes__c.field-meta.xml
<CustomField>
    <fullName>Retention_Challenges_Notes__c</fullName>
    <label>Retention Challenges Notes</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>