unpackaged/main/default/objects/Enrollment_Record__c/fields/Retention_Score__c.field-meta.xml
<CustomField>
    <fullName>Retention_Score__c</fullName>
    <formula>Vaccination_Score__c + Passport_Score__c + Visa_Score__c  + Payment_Score__c + Course_Score__c + Flights_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retention Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>