unpackaged/main/default/objects/Enrollment_Record__c/fields/Retention_Status__c.field-meta.xml
<CustomField>
    <fullName>Retention_Status__c</fullName>
    <label>Retention Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Solid</fullName>
            </value>
            <value>
                <fullName>Shaky</fullName>
            </value>
            <value>
                <fullName>Unlikely</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>