unpackaged/main/default/objects/Enrollment_Record__c/fields/Rick_s_Notes__c.field-meta.xml
<CustomField>
    <fullName>Rick_s_Notes__c</fullName>
    <label>Rick&#39;s Notes</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>