unpackaged/main/default/objects/Enrollment_Record__c/fields/Roommate_Request__c.field-meta.xml
<CustomField>
    <fullName>Roommate_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Roommate Request</label>
    <referenceTo>Roommate_Request__c</referenceTo>
    <relationshipLabel>Enrollment Records</relationshipLabel>
    <relationshipName>Enrollment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>