unpackaged/main/default/objects/Enrollment_Record__c/fields/Rqst_Info_on_Deferral_Transfer_Credit__c.field-meta.xml
<CustomField>
    <fullName>Rqst_Info_on_Deferral_Transfer_Credit__c</fullName>
    <label>Rqst Info on Deferral/Transfer Credit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>