unpackaged/main/default/objects/Enrollment_Record__c/fields/School_of_Record__c.field-meta.xml
<CustomField>
    <fullName>School_of_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>School of Record</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.School_of_Record__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>School of Record Enrolled Students</relationshipLabel>
    <relationshipName>Enrollment_Records1</relationshipName>
    <type>Lookup</type>
</CustomField>