unpackaged/main/default/objects/Enrollment_Record__c/fields/School_of_Record_Email__c.field-meta.xml
<CustomField>
    <fullName>School_of_Record_Email__c</fullName>
    <label>School of Record Email</label>
    <type>Email</type>
</CustomField>