unpackaged/main/default/objects/Enrollment_Record__c/fields/Semester_Withdrawal_Form_Link__c.field-meta.xml
<CustomField>
    <fullName>Semester_Withdrawal_Form_Link__c</fullName>
    <label>Semester Withdrawal Form Link</label>
    <type>Url</type>
</CustomField>