unpackaged/main/default/objects/Enrollment_Record__c/fields/Semester_Withdrawal_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Semester_Withdrawal_Form_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Semester Withdrawal Form Submitted</label>
    <type>Checkbox</type>
</CustomField>