unpackaged/main/default/objects/Enrollment_Record__c/fields/SF_ID18_ER__c.field-meta.xml
<CustomField>
    <fullName>SF_ID18_ER__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SF_ID18_ER</label>
    <type>Text</type>
</CustomField>