unpackaged/main/default/objects/Enrollment_Record__c/fields/Student_Account__c.field-meta.xml
<CustomField>
    <fullName>Student_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Student Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Enrollment Records</relationshipLabel>
    <relationshipName>Enrollment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>