unpackaged/main/default/objects/Enrollment_Record__c/fields/Student_Account_Phone__c.field-meta.xml
<CustomField>
    <fullName>Student_Account_Phone__c</fullName>
    <formula>Student_Account__r.Phone</formula>
    <label>Student Account Phone</label>
    <type>Text</type>
</CustomField>