unpackaged/main/default/objects/Enrollment_Record__c/fields/Student_ID_SoR__c.field-meta.xml
<CustomField>
    <fullName>Student_ID_SoR__c</fullName>
    <label>Student ID No SoR</label>
    <length>50</length>
    <type>Text</type>
</CustomField>