unpackaged/main/default/objects/Enrollment_Record__c/fields/Student_Life_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>Student_Life_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Student Life Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enrollment_SLCs</relationshipName>
    <type>Lookup</type>
</CustomField>