unpackaged/main/default/objects/Enrollment_Record__c/fields/Students_Name__c.field-meta.xml
<CustomField>
    <fullName>Students_Name__c</fullName>
    <formula>Student_Account__r.First_Name__c &amp; &quot; &quot; &amp; Student_Account__r.Last_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student&#39;s Name</label>
    <type>Text</type>
</CustomField>