unpackaged/main/default/objects/Enrollment_Record__c/fields/Vaccination_Form_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Vaccination_Form_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Vaccination Form Submitted</label>
    <type>Checkbox</type>
</CustomField>