unpackaged/main/default/objects/Enrollment_Record__c/fields/Vaccination_Score__c.field-meta.xml
<CustomField>
    <fullName>Vaccination_Score__c</fullName>
    <formula>IF( Vaccination_Form_Submitted__c = TRUE, 10, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vaccination Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>