unpackaged/main/default/objects/Enrollment_Record__c/fields/Valid_Passport__c.field-meta.xml
<CustomField>
    <fullName>Valid_Passport__c</fullName>
    <label>Valid Passport?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>