unpackaged/main/default/objects/Enrollment_Record__c/fields/Visa_Appointment_Date_Mail_In_Date__c.field-meta.xml
<CustomField>
    <fullName>Visa_Appointment_Date_Mail_In_Date__c</fullName>
    <label>Consulate Appointment Date/Mail-In Date</label>
    <type>Date</type>
</CustomField>