unpackaged/main/default/objects/Enrollment_Record__c/fields/Visa_Appointment_Needed__c.field-meta.xml
<CustomField>
    <fullName>Visa_Appointment_Needed__c</fullName>
    <label>Visa Appointment Needed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Mail-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>