unpackaged/main/default/objects/Enrollment_Record__c/fields/Visa_Appointment_Type__c.field-meta.xml
<CustomField>
    <fullName>Visa_Appointment_Type__c</fullName>
    <label>Visa Appointment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Personal</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>