unpackaged/main/default/objects/Enrollment_Record__c/fields/Visa_Documents_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Visa_Documents_Sent_Date__c</fullName>
    <label>Visa Documents Sent Date</label>
    <type>Date</type>
</CustomField>