unpackaged/main/default/objects/Enrollment_Record__c/fields/Visa_Notes__c.field-meta.xml
<CustomField>
    <fullName>Visa_Notes__c</fullName>
    <label>Visa Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>