unpackaged/main/default/objects/Enrollment_Record__c/fields/Visa_Recieved__c.field-meta.xml
<CustomField>
    <fullName>Visa_Recieved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Visa Recieved?</label>
    <type>Checkbox</type>
</CustomField>