unpackaged/main/default/objects/Enrollment_Record__c/fields/Visa_Score__c.field-meta.xml
<CustomField>
    <fullName>Visa_Score__c</fullName>
    <formula>IF( ISPICKVAL(Visa_Status__c, &quot;Not Required - Approved Int&#39;l Passport&quot;), 15, 


IF(ISPiCKVAL(Visa_Status__c , &quot;Approved&quot;), 15, IF(ISPICKVAL(Visa_Status__c, &quot;Submitted&quot;), 5, 0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Visa Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>