unpackaged/main/default/objects/Enrollment_Record__c/fields/Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Visa_Status__c</fullName>
    <label>Visa Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Needs Documentation</fullName>
            </value>
            <value>
                <fullName>Documentation Complete</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Not Required - Approved Int&#39;l Passport</fullName>
            </value>
            <value>
                <fullName>Not Required for Program - US Passport Holder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>