unpackaged/main/default/objects/Enrollment_Record__c/fields/Welcome_Call_Completed_On__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Call_Completed_On__c</fullName>
    <label>Welcome Call Completed On</label>
    <type>Date</type>
</CustomField>