unpackaged/main/default/objects/Enrollment_Record__c/fields/Welcome_Package_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Package_Sent__c</fullName>
    <formula>NOT(ISBLANK(Welcome_Packet_Sent_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Welcome Package Sent?</label>
    <type>Checkbox</type>
</CustomField>