unpackaged/main/default/objects/Enrollment_Record__c/fields/Welcome_Packet_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Packet_Sent_Date__c</fullName>
    <label>Welcome Packet Sent Date</label>
    <type>Date</type>
</CustomField>