unpackaged/main/default/objects/Enrollment_Record__c/fields/Withdrawal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Reason__c</fullName>
    <label>Cancel Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covid: Concerned</fullName>
                <label>Covid Related</label>
            </value>
            <value>
                <fullName>Finance: Misunderstanding</fullName>
                <label>Financial</label>
            </value>
            <value>
                <fullName>Health Related</fullName>
                <label>Health</label>
            </value>
            <value>
                <fullName>Non-responsive</fullName>
                <label>Non-Responsive</label>
            </value>
            <value>
                <fullName>Fit Issue: Age</fullName>
                <label>Age</label>
            </value>
            <value>
                <fullName>General Melt</fullName>
            </value>
            <value>
                <fullName>Family Related</fullName>
            </value>
            <value>
                <fullName>Fit Issue: Academics</fullName>
                <label>Academics</label>
            </value>
            <value>
                <fullName>International Student Access Issue</fullName>
                <label>International Student Access</label>
            </value>
            <value>
                <fullName>Non-Partner College</fullName>
            </value>
            <value>
                <fullName>Off Channel Waitlist</fullName>
            </value>
            <value>
                <fullName>Not going to Channel</fullName>
                <label>Not Going to Channel</label>
            </value>
            <value>
                <fullName>Partner College</fullName>
            </value>
            <value>
                <fullName>Passport Issue</fullName>
                <label>Passport</label>
            </value>
            <value>
                <fullName>Top Choice School</fullName>
            </value>
            <value>
                <fullName>Verto Decision</fullName>
            </value>
            <value>
                <fullName>Visa Issue</fullName>
            </value>
            <value>
                <fullName>Post-Arrival</fullName>
            </value>
            <value>
                <fullName>Code of Conduct Violation</fullName>
            </value>
            <value>
                <fullName>Cold Feet</fullName>
                <isActive>false</isActive>
                <label>Cold Feet</label>
            </value>
            <value>
                <fullName>Covid: Semester Adjustment</fullName>
                <isActive>false</isActive>
                <label>Covid: Semester Adjustment</label>
            </value>
            <value>
                <fullName>Covid: Vaccination Policy</fullName>
                <isActive>false</isActive>
                <label>Covid: Vaccination Policy</label>
            </value>
            <value>
                <fullName>Extenuating Circumstances</fullName>
                <isActive>false</isActive>
                <label>Extenuating Circumstances</label>
            </value>
            <value>
                <fullName>Finance: Cannot Afford Semester</fullName>
                <isActive>false</isActive>
                <label>Finance: Cannot Afford Semester</label>
            </value>
            <value>
                <fullName>Fit Issue: General</fullName>
                <isActive>false</isActive>
                <label>Fit Issue: General</label>
            </value>
            <value>
                <fullName>Mental Health Related</fullName>
                <isActive>false</isActive>
                <label>Mental Health</label>
            </value>
            <value>
                <fullName>Non-Partner College (Credit Issue)</fullName>
                <isActive>false</isActive>
                <label>Non-Partner College (Credit Issue)</label>
            </value>
            <value>
                <fullName>Non-Partner College (Scholarship Issue)</fullName>
                <isActive>false</isActive>
                <label>Non-Partner College (Scholarship Issue)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>