unpackaged/main/default/objects/Enrollment_Record__c/fields/Withdrawal_Request_Link__c.field-meta.xml
<CustomField>
    <fullName>Withdrawal_Request_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://vertoeducation.formstack.com/forms/withdrawal_request_form?aid=&quot;&amp;Student_Account__c&amp;&quot;&amp;program=&quot;&amp;Program__c&amp;&quot;&amp;First_Name=&quot;&amp; Z_Text_First_Name__c &amp;&quot;&amp;last_name=&quot;&amp; z_Text_Last_Name__c &amp;&quot;&amp;email=&quot;&amp; E_Email__c , &quot;Withdrawal Request Form&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Withdrawal Request Link</label>
    <type>Text</type>
</CustomField>