unpackaged/main/default/objects/Enrollment_Record__c/fields/X90_Day_Semester__c.field-meta.xml
<CustomField>
    <fullName>X90_Day_Semester__c</fullName>
    <defaultValue>false</defaultValue>
    <label>90 Day Semester?</label>
    <type>Checkbox</type>
</CustomField>