unpackaged/main/default/objects/Enrollment_Record__c/fields/z_Academic_Interests_Other_Explanation__c.field-meta.xml
<CustomField>
    <fullName>z_Academic_Interests_Other_Explanation__c</fullName>
    <label>z_Academic Interests Other Explanation</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>