unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_ACT_Score__c.field-meta.xml
<CustomField>
    <fullName>Z_ACT_Score__c</fullName>
    <label>Z_ACT Score</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>