unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Any_Additional_Feedback_for_SS__c.field-meta.xml
<CustomField>
    <fullName>Z_Any_Additional_Feedback_for_SS__c</fullName>
    <label>Z_Any Additional Feedback for SS</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>