unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Any_Dietary_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Z_Any_Dietary_Restrictions__c</fullName>
    <label>Z_Any Dietary Restrictions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>