unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Any_Medical_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Z_Any_Medical_Conditions__c</fullName>
    <label>Z_Any Medical Conditions?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>