unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Z_Billing_City__c</fullName>
    <formula>Student_Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>To update go to the Student&#39;s Account</inlineHelpText>
    <label>Z_Billing City</label>
    <type>Text</type>
</CustomField>