unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Billing_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Z_Billing_Zip_Postal_Code__c</fullName>
    <formula>Student_Account__r.BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Billing Zip/Postal Code</label>
    <type>Text</type>
</CustomField>