unpackaged/main/default/objects/Enrollment_Record__c/fields/z_chool_Choice_4_Why__c.field-meta.xml
<CustomField>
    <fullName>z_chool_Choice_4_Why__c</fullName>
    <label>z_Partner School Choice 4: Why</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>