unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_College_and_Career_Goals__c.field-meta.xml
<CustomField>
    <fullName>Z_College_and_Career_Goals__c</fullName>
    <label>Z_College and Career Goals</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>