unpackaged/main/default/objects/Enrollment_Record__c/fields/z_College_Counselor__c.field-meta.xml
<CustomField>
    <fullName>z_College_Counselor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>z_College Counselor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enrollment_Records_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>