unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_College_Planning_Process_Notes__c.field-meta.xml
<CustomField>
    <fullName>Z_College_Planning_Process_Notes__c</fullName>
    <label>Z_College Planning Process Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>