unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_College_Process_Need_Guidance__c.field-meta.xml
<CustomField>
    <fullName>Z_College_Process_Need_Guidance__c</fullName>
    <label>Z_College Process Need Guidance</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Choosing the right colleges</fullName>
            </value>
            <value>
                <fullName>Developing my personal statement</fullName>
            </value>
            <value>
                <fullName>Narrowing down my major and career path</fullName>
            </value>
            <value>
                <fullName>Understanding the Verto application process</fullName>
            </value>
            <value>
                <fullName>I do not need additional college counseling or guidance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>