unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Concerns_About_Life_After_HS__c.field-meta.xml
<CustomField>
    <fullName>Z_Concerns_About_Life_After_HS__c</fullName>
    <label>Z_Concerns About Life After HS</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>