unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Concerns_with_Travel_or_Verto__c.field-meta.xml
<CustomField>
    <fullName>Z_Concerns_with_Travel_or_Verto__c</fullName>
    <label>Z_Concerns with Travel or Verto?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>