unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Confirmed_First_Program__c.field-meta.xml
<CustomField>
    <fullName>Z_Confirmed_First_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Confirmed First Program</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Enrollment Records</relationshipLabel>
    <relationshipName>Enrollment_Records</relationshipName>
    <type>Lookup</type>
</CustomField>