unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Confirmed_First_Second_Semester__c.field-meta.xml
<CustomField>
    <fullName>Z_Confirmed_First_Second_Semester__c</fullName>
    <description>Concatenated Confirmed First Semester and Confirmed Second Semester fields. Created for use in dashboard filters</description>
    <formula>&quot;1st Semester: &quot; + Z_Confirmed_First_Semester__r.Name + &quot; | &quot; + &quot;2nd Semester: &quot; + Z_Confirmed_Second_Semester__r.Name</formula>
    <label>Z_Confirmed First &amp; Second Semester</label>
    <type>Text</type>
</CustomField>