unpackaged/main/default/objects/Enrollment_Record__c/fields/Z_Confirmed_Second_Program__c.field-meta.xml
<CustomField>
    <fullName>Z_Confirmed_Second_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Confirmed Second Program</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Enrollment Records (Confirmed Second Program)</relationshipLabel>
    <relationshipName>Enrollment_Records2</relationshipName>
    <type>Lookup</type>
</CustomField>